force-app/main/default/objects/Vendor_PO_Line__c/Vendor_PO_Line__c.object-meta.xml
<CustomObject>
    <description>Line item on a Vendor PO. Tracks expected vs received quantity per Product2 SKU.</description>
    <label>Vendor PO Line</label>
    <nameField>
        <displayFormat>POL-{0000}</displayFormat>
        <label>PO Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor PO Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>