force-app/main/default/objects/Vendor_PO_Line__c/fields/Expected_Qty__c.field-meta.xml
<CustomField>
    <fullName>Expected_Qty__c</fullName>
    <label>Expected Qty</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>