force-app/main/default/objects/Vendor_PO_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PO Lines</relationshipLabel>
    <relationshipName>PO_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>