force-app/main/default/objects/Vendor_PO_Line__c/fields/Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Received_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Received Qty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>