force-app/main/default/objects/Vendor_PO_Line__c/fields/Vendor_PO__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PO__c</fullName>
    <label>Vendor PO</label>
    <referenceTo>Vendor_PO__c</referenceTo>
    <relationshipLabel>PO Lines</relationshipLabel>
    <relationshipName>PO_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>